gcc/ 	PR tree-optimization/23518 	* fold-const.c (make_range): Don't move a constant to the 	other side of the comparison if the type is signed and -fwrapv 	is given.

gcc/testsuite/
	PR tree-optimization/23518
	* testsuite/gcc.dg/pr23518.c: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@108940 138bc75d-0d04-0410-961f-82ee72b054a4